--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "[인프런 - 제로초 - React로 NodeBird SNS 만들기] 강의를 기반으로 생성 + 코드개선 + 디자인 개선 + 기능추가",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 3060", /*"dev": "next"*/
-    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
-    "start": "cross-env NODE_ENV=production next start -p 3060"
+    "dev": "next -p 3060"
   },
   "repository": {
     "type": "git",
@@ -17,10 +15,30 @@
   "bugs": {
     "url": "https://github.com/eunwk/react-sns/issues"
   },
-  "homepage": "https://github.com/eunwk/react-sns#readme",
+  "homepage": "https://github.com/eunwk/react-sns",
   "dependencies": {
-    "next": "^12.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.21.2",
+    "axios": "^0.27.2",
+    "immer": "^9.0.15",
+    "next": "^9.5.5",
+    "next-redux-wrapper": "^6.0.2",
+    "react-redux": "^8.0.2",
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "shortid": "^2.2.16",
+    "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
