atnd > 부트스트랩, style-component > emotion으로 변경

--- a/.gitignore
+++ b/.gitignore
@@ -133,10 +133,10 @@ typings/
 .vuepress/dist
 
 # Serverless directories
-.serverless
+# .serverless
 /front/build/
-react-nodebird.pem
-react-nodebird-aws.pem
+# react-nodebird.pem
+# react-nodebird-aws.pem
 node_modules
 .env
 .next
