--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
   },
   "homepage": "https://github.com/eunwk/react-sns",
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "antd": "^4.21.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
     "immer": "^9.0.15",
     "next": "^9.5.5",
     "next-redux-wrapper": "^6.0.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
-    "shortid": "^2.2.16",
-    "styled-components": "^5.3.5"
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
