--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "next": "^9.5.5",
     "next-redux-wrapper": "^6.0.2",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
