--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
