--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
